--- a/4C drug_policy_page.html
+++ b/4C drug_policy_page.html
@@ -70,8 +70,15 @@
     <main id="main-content" role="main">
         <section class="hero drug-policy-hero">
             <div class="hero-content">
-                <h1>Drug Policy & Overdose Prevention</h1>
-                <p class="hero-subtitle">Taking a public health approach to substance use, advancing evidence-based harm reduction policies and community interventions that save lives</p>
+                <div class="hero-text">
+                    <h1>Drug Policy & Overdose Prevention</h1>
+                    <p class="hero-subtitle">Taking a public health approach to substance use, advancing evidence-based harm reduction policies and community interventions that save lives</p>
+                </div>
+                <div class="hero-image">
+                    <img src="10 Assets/Drug Policy and OD Prevention/Drug Policy Hero Image.webp" alt="Drug Policy & Overdose Prevention" class="hero-img" loading="eager">
+                </div>
+            </div>
+            <div class="crisis-content">
                 
                 <div class="crisis-stats">
                     <div class="crisis-stat">
