--- a/4C drug_policy_page.html
+++ b/4C drug_policy_page.html
@@ -69,16 +69,18 @@
 
     <main id="main-content" role="main">
         <section class="hero drug-policy-hero">
-            <div class="hero-content">
-                <div class="hero-text">
-                    <h1>Drug Policy & Overdose Prevention</h1>
-                    <p class="hero-subtitle">Taking a public health approach to substance use, advancing evidence-based harm reduction policies and community interventions that save lives</p>
+            <div class="container">
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h1>Drug Policy & Overdose Prevention</h1>
+                        <p class="hero-subtitle">Taking a public health approach to substance use, advancing evidence-based harm reduction policies and community interventions that save lives</p>
+                    </div>
+                    <div class="hero-image">
+                        <img src="10 Assets/Drug Policy and OD Prevention/Drug Policy Hero Image.webp" alt="Drug Policy & Overdose Prevention" class="hero-img" loading="eager">
+                    </div>
                 </div>
-                <div class="hero-image">
-                    <img src="10 Assets/Drug Policy and OD Prevention/Drug Policy Hero Image.webp" alt="Drug Policy & Overdose Prevention" class="hero-img" loading="eager">
-                </div>
-            </div>
-            <div class="crisis-content">
+                
+                <div class="crisis-content">
                 
                 <div class="crisis-stats">
                     <div class="crisis-stat">
@@ -93,6 +95,7 @@
                         <span class="crisis-number animated-counter" data-target="2300" data-suffix="+">0</span>
                         <span class="crisis-label">Overdose deaths in Arizona annually</span>
                     </div>
+                </div>
                 </div>
             </div>
         </section>
